# grit

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
pedant_tests/: exclude
pedant_tests/add_modifying_tracked_file/: cmds
pedant_tests/add_two_files/: cmds
pedant_tests/cat_file_blob/: cmds
pedant_tests/cat_file_wrong_object_type/: cmds
pedant_tests/commit_nothing_added/: cmds
pedant_tests/hash_and_write_text_file/: cmds
pedant_tests/hash_text_file/: cmds
pedant_tests/init_not_empty/: cmd_left.bash
pedant_tests/ls_files/: cmds
pedant_tests/status/: cmds
pedant_tests/write_tree_nested/: cmds
pedant_tests/write_tree_simple/: cmds
src/: add.rs  cat_file.rs  checkout.rs  commit.rs  hash_object.rs  index.rs  init.rs  lib.rs  log.rs  ls_files.rs  main.rs  objects.rs  status.rs  write_tree.rs
tests/: checkout_tests.rs  init_tests.rs
utils/: Cargo.toml
utils/src/: lib.rs
